Updated PE thermodynamics
Improved model predictions employing low temperature data of heat capacities for liquid- LMW and HMW species.
A similar approach is also employed for the crystalline phase.

Removed gas-phase reactions as they are not complete. Further work is underway

--- a/PE/LDPE/LDPE_42_500/LDPE.liquid
+++ b/PE/LDPE/LDPE_42_500/LDPE.liquid
@@ -1075,7 +1075,7 @@ P-C21H41(L)+C39H75(L)=>P-C21H40(L)+C4H6+0.1666667C15H30(L)+0.8333333C39H78(L)   
 	FORD/C39H75(L) 1/
 0.25C39H76(L)+0.5C39H78(L)+0.25C39H80(L)+C39H75(L)=>0.25C39H75(L)+0.5C39H77(L)+0.25C39H79(L)+C4H6+0.1666667C15H30(L)+0.8333333C39H78(L)          7.47e+17 0.00 37800
 	FORD/C39H76(L) 0/
-	FORD/C39H78(L) 0/
+	FORÿ C3 ?? (L) 0/
 	FORD/C39H80(L) 1/
 	FORD/C39H75(L) 1/
 
