--- a/PP/PP_skeletal/PP.liquid
+++ b/PP/PP_skeletal/PP.liquid
@@ -2,38 +2,38 @@ MATERIAL LIQUIDMIX
 LIQUID
 
 !MID-CHAINS
- P-IC42H84-P_S(L) P-IC42H84-P(L) 
+ P-IC30H60-P_S(L) P-IC30H60-P(L) 
 
-!reactive LMW
- IC30H60(L)     
+!unreactive LMW
+ C3H6(L)        C5H12(L)       IC4H8(L)     
+ IC6H10(L)      IC9H18(L)      IC15H30(L)     IC30H60(L)     
 
 END
 
 REACTIONS
 
 ! Melting reactions
-P-IC42H84-P_S(L)=>P-IC42H84-P(L)                                                                                                                      1.00e+17 0.00 37000
+P-IC30H60-P_S(L)=>P-IC30H60-P(L)                                                                                                                      1.00e+17 0.00 37000
 
 ! Evaporation reactions
-IC30H60(L)=>IC30H60               	                                                                                                                   8.00e+07 0.00 34000
+IC30H60(L)=>IC30H60               	                                                                                                                  3.00e+11 0.00 40000
        
-!************************
-! beta C2,C3,C7,C16,C30 - unzipping - butadiene/BB5 - C3H6
-!************************
-
 ! beta-scission
-P-IC42H84-P(L)=>0.132492113564669C5H12+0.132492113564669IC6H10+0.132492113564669IC9H18+0.397476340694006IC15H30+1.11293375394322IC30H60(L)            2.00e+14 0.00 55000
-P-IC42H84-P(L)=>0.904761905P-IC42H84-P(L)+IC4H8                                                                                                       1.43e+13 0.00 52500
+P-IC30H60-P(L)=>0.0474683544303797C5H12+0.0474683544303797IC6H10+0.0474683544303797IC9H18+0.142405063291139IC15H30+0.897151898734177IC30H60(L)        6.00e+15 0.00 60000
+P-IC30H60-P(L)=>0.866666667P-IC30H60-P(L)+IC4H8                                                                                                       3.00e+14 0.00 57500
 
 !backbiting-butadiene
-P-IC42H84-P(L)=>C5H12+IC6H10+IC9H18+0.523809524P-IC42H84-P(L)                                                                                         1.86e+12 0.00 50000
+P-IC30H60-P(L)=>C5H12+IC6H10+IC9H18+0.333333333P-IC30H60-P(L)                                                                                         6.00e+16 0.00 65000
+P-IC30H60-P(L)=>IC15H30+0.5P-IC30H60-P(L)                                                                                                             3.00e+17 0.00 67000
 
 !unzipping
-P-IC42H84-P(L)=>0.928571429P-IC42H84-P(L)+C3H6                                                                                                        2.86e+15 0.00 60000
+P-IC30H60-P(L)=>0.9P-IC30H60-P(L)+C3H6                                                                                                                7.00e+19 0.00 75000
 
-IC30H60(L)=>0.0946372239747634C5H12+0.0946372239747634IC6H10+0.0946372239747634IC9H18+0.28391167192429IC15H30+0.794952681388013IC30H60(L)             2.80e+14 0.00 55000
-IC30H60(L)=>C3H6+0.2IC15H30+0.8IC30H60(L)                                                                                                             2.86e+15 0.00 60000
-IC30H60(L)=>C5H12+IC6H10+1.833333333IC9H18+0.166666667IC15H30                                                                                         1.86e+12 0.00 50000
-IC30H60(L)=>IC4H8+0.266666667IC15H30+0.733333333IC30H60(L)                                                                                            1.43e+13 0.00 52500
+IC30H60(L)=>0.0946372239747634C5H12+0.0946372239747634IC6H10+0.0946372239747634IC9H18+0.28391167192429IC15H30+0.794952681388013IC30H60(L)             3.00e+15 0.00 60000
+IC30H60(L)=>C3H6+0.2IC15H30+0.8IC30H60(L)                                                                                                             7.00e+19 0.00 75000
+IC30H60(L)=>C5H12+IC6H10+1.833333333IC9H18+0.166666667IC15H30                                                                                         6.00e+16 0.00 65000
+IC30H60(L)=>2IC15H30                                                                                                                                  3.00e+17 0.00 67000
+IC30H60(L)=>IC4H8+0.266666667IC15H30+0.733333333IC30H60(L)                                                                                            3.00e+14 0.00 57500
+
 
 END
